# haikal

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  bbuild.bat  bexe.bat  brun.bat  haikal.toml
Tsource/: main.c
include/: Array.h  core.h  hkArray.h  hkArrayT.h  node.h  stack.h
oldimpl/include/: hkArrayT-primitives.h
oldimpl/source/: hkArray.c  notes.txt
scripts/: bbuild.bat  build.bat  ccompile.bat  ccompilerun.bat  clang-build.ps1  destroy.bat  finalize.py  run.bat
source/: array.c  array.h  darray.c  darray.h  hkArray.c  list.c  list.h  main.c  node.c  pointers.c  stack.c  xstring.c  xstring.h
src/: core.h  main.c  meta.c  meta.h  saha.h  test.c
src/meta/: Array_TYPE.c  Array_TYPE.h  BiNode_TYPE.c  BiNode_TYPE.h  BiNode_TYPE_internal.h  DList_TYPE.c  DList_TYPE.h  List_TYPE.c  List_TYPE.h  Map_TYPE.c  Map_TYPE.h  Map_TYPE_internal.h  Node_TYPE.c  Node_TYPE.h  Node_TYPE_internal.h  Queue_TYPE.c  Queue_TYPE.h  Stack_TYPE.c  Stack_TYPE.h  TYPE.h  core.h  hkArray_TYPE.c  hkArray_TYPE.h  hkArray_TYPE_internal.h  hkBiNode_TYPE.c  hkBiNode_TYPE.h  hkBiNode_TYPE_internal.h  hkDList_TYPE.c  hkDList_TYPE.h  hkDList_TYPE_internal.h  hkHashMap_T0_T1.h  hkHashMap_TYPE.c  hkHashMap_TYPE.h  hkHashMap_TYPE_internal.h  hkList_TYPE.c  hkList_TYPE.h  hkList_TYPE_internal.h  hkNode_TYPE.c  hkNode_TYPE.h  hkNode_TYPE_internal.h  (+6 more)
src/meta_arena/: Array_TYPE.c  Array_TYPE.h  Array_TYPE_internal.h  BiNode_TYPE.c  BiNode_TYPE.h  DList_TYPE.c  DList_TYPE.h  DList_TYPE_internal.h  List_TYPE.c  List_TYPE.h  List_TYPE_internal.h  Map_T0_T1.h  Map_TYPE.c  Map_TYPE.h  (+9 more)
(+5 files in other folders)
